# CERN-Chatbot

./: .gitignore  README.md  docker-compose  docker-compose.yaml
backend/: Dockerfile  pyproject.toml  secrets.env
backend/api/routers/: chat.py
backend/api/services/: chatbot.py
backend/config/: config.yaml
backend/databases/postgres/migrations/versions/: 1c85099b2585_add_width_and_height_fields_to_image.py
backend/rag/: embedding.py  pipeline.py  preprocess.py
backend/src/api/: app.py  main.py
backend/src/api/domain/: models.py
backend/src/api/routers/: chat.py
backend/src/api/services/: chatbot.py
backend/src/config/: conf.py  config.yaml
backend/src/databases/postgres/: crud.py  database.py
backend/src/databases/postgres/migrations/versions/: 58123c737f2e_connected_alembic_with_sqlmodel.py
backend/src/rag/: embedding.py  llm.py  model.py  parse.py  pipeline.py  preprocess.py  query.py  schema.py  template.py  vector.py
backend/src/rag/prompts/: gemma_2b.txt  phi3.txt  qa.txt
backend/src/utils/: conf.py  path.py  tokens.py
backend/utils/: conf.py  path.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/app/: page.tsx
infra/: Pulumi.yaml  __main__.py
src/: docker-compose.yaml
src/backend/: pyproject.toml
src/backend/api/: app.py  main.py
src/backend/api/routers/: chat.py
src/backend/api/services/: chatbot.py
src/backend/config/: config.yaml
src/backend/databases/postgres/: crud.py  database.py
src/backend/databases/postgres/domain/: models.py
src/backend/databases/postgres/migrations/: env.py  script.py.mako
src/backend/databases/postgres/migrations/versions/: 666038eed4e9_drop_tables.py  bfeeab0247d3_remove_image_width_and_height.py  c661ea24c4c6_rename_tables.py
src/backend/rag/: chat.py  embedding.py  model.py  parse.py  pipeline.py  preprocess.py  template.py
src/backend/utils/: conf.py  path.py  tokens.py
src/frontend/: package-lock.json  package.json
(+11 files in other folders)
