[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Artachtron <florent.vaucher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pdf2image = "^1.17.0"
python-dotenv = "^1.0.1"
weaviate-client = "^4.5.5"
pyyaml = "^6.0.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
unstructured = "^0.14.0"
cohere = "^5.5.0"
langchain-community = "^0.2.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
