[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Artachtron <florent.vaucher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
unstructured = {extras = ["pdf"], version = "^0.12.6"}
pdf2image = "^1.17.0"
python-dotenv = "^1.0.1"
weaviate-client = "^4.5.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
