[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Artachtron <florent.vaucher@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
unstructured = {extras = ["pdf"], version = "^0.12.6"}
pdf2image = "^1.17.0"
python-dotenv = "^1.0.1"
weaviate-client = ">=3.26.2,<4.0.0"
llama-index-vector-stores-weaviate = "^0.1.4"
llama-index = "^0.10.23"
llama-index-embeddings-huggingface = "^0.1.4"
llama-index-llms-huggingface = "^0.1.4"
pyyaml = "^6.0.1"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
